--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -25,8 +25,9 @@ $theme-colors: (
   "primary": $primary,
   "secondary": $light,
   "success": $success,
-  "danger": $danger,
   "info": $supporting,
+  "warning": $warning,
+  "danger": $danger,
   "dark": $dark,
   "light": $light,
   "tertiary": $tertiary,
@@ -74,8 +75,9 @@ $utilities: map-merge(
     "primary": $primary,
     "secondary": $secondary,
     "success": $success,
-    "danger": $danger,
     "info": $supporting,
+    "warning": $warning,
+    "danger": $danger,
     "dark": $dark,
     "light": $light,
     "tertiary": $tertiary,
