--- a/src/style/index.css
+++ b/src/style/index.css
@@ -503,11 +503,19 @@
 }
 
 #body-sign-in {
+  height: 100vh;
   display: flex;
   align-items: center;
   padding-top: 40px;
   padding-bottom: 40px;
   background-color: #f8f9fa;
+}
+
+#div-sign-in {
+  width: 100%;
+  max-width: 500px;
+  padding: 15px;
+  margin: auto;
 }
 
 .bg-supporting {
