--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -9,11 +9,19 @@
 }
 
 #body-sign-in {
+  height: 100vh;
   display: flex;
   align-items: center;
   padding-top: 40px;
   padding-bottom: 40px;
   background-color: $light;
+}
+
+#div-sign-in {
+  width: 100%;
+  max-width: 500px;
+  padding: 15px;
+  margin: auto;
 }
 
 $body-bg: $light;
